// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageNotFound renders a 404 page 1`] = `
Array [
  <div
    className="hero"
    style={
      Object {
        "backgroundImage": "url(https://i.giphy.com/media/sMABNWsUWPC1y/giphy.gif)",
      }
    }
  >
    <div
      className="d-flex justify-content-center color-wash"
    >
      <div>
        <h1
          className="mt-5 display-4 text-white display-block"
        >
          Oops... We can't find:
           
          <code
            className="text-danger"
          >
            /
          </code>
        </h1>
        <h3
          className="mt-5 display-5 text-white"
        >
          Try these pages instead:
        </h3>
        <h4
          className="text-white"
        >
          <a
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
             
          <span
            className="text-secondary font-weight-light"
          >
            Ours, not yours
          </span>
        </h4>
        <h4
          className="text-white"
        >
          <a
            href="/contact"
            onClick={[Function]}
          >
            Contact Us
          </a>
             
          <span
            className="text-secondary font-weight-light"
          >
            Reach out, we are pretty cool
          </span>
        </h4>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`PageNotFound renders a 404 page 2`] = `
<div
  className="hero"
  style={
    Object {
      "backgroundImage": "url(myimage.jpg)",
    }
  }
>
  <div
    className="d-flex justify-content-center color-wash"
  >
    <div>
      <h1
        className="mt-5 display-4 text-white display-block"
      >
        Oops... We can't find:
         
        <code
          className="text-danger"
        >
          /
        </code>
      </h1>
      <h3
        className="mt-5 display-5 text-white"
      >
        Try these pages instead:
      </h3>
      <h4
        className="text-white"
      >
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
           
        <span
          className="text-secondary font-weight-light"
        >
          Ours, not yours
        </span>
      </h4>
      <h4
        className="text-white"
      >
        <a
          href="/contact"
          onClick={[Function]}
        >
          Contact Us
        </a>
           
        <span
          className="text-secondary font-weight-light"
        >
          Reach out, we are pretty cool
        </span>
      </h4>
    </div>
  </div>
</div>
`;
